# KT-DS

./: DAY01_002_Langchain_Components.ipynb  DAY01_003_LangSmith_LCEL.ipynb  DAY01_004_LangServe.ipynb  DAY01_005_RAG.ipynb  DAY01_006_Prompt_Engineering_Fewshot.ipynb  DAY02_001_RAG_Evalution.ipynb  DAY02_002_Hybrid_Search.ipynb  DAY02_004_Rerank_Compression.ipynb  DAY02_005_ToolCalling_Agent.ipynb  DAY02_006_LangChain_Tools.ipynb  DAY03_001_LangGraph_StateGraph.ipynb  DAY03_002_LangGraph_MessageGraph.ipynb  DAY03_003_LangGraph_ReAct.ipynb  DAY03_004_LangGraph_Memory.ipynb  DAY03_005_LangGraph_HITL.ipynb  DAY03_006_LangGraph_SelfRAG.ipynb  main.py  mcp_client.ipynb  mcp_client.py  mcp_rag.py  pyproject.toml
app/: rag.py  server.py
data/: korean_docs_final.jsonl  ragas_testset.csv
faiss_index/: labor_law_pdf.faiss  labor_law_pdf.pkl
